--- a/Final_Tasks.html
+++ b/Final_Tasks.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="gallery-item video-item">
                     <video controls width="100%" height="100%" id="presentation-video">
-                        <source src="Web-Presentation.mov" type="video/mp4">
+                        <source src="Web-Presentation.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="gallery-label">10/19/25 - Final Output in Introduction to Computing: Video Presentation</div>
@@ -101,4 +101,5 @@
         </a>
     </footer>
 </body>
+
 </html>
